--- a/.github/workflows/DataUpdade.yml
+++ b/.github/workflows/DataUpdade.yml
@@ -2,7 +2,7 @@ name: Data-Update
 
 on: 
   schedule:
-  - cron: "40 9 * * *"
+  - cron: "40 11 * * *"
 
 jobs:
   update-data:
@@ -16,6 +16,7 @@ jobs:
           repository: CSSEGISandData/COVID-19
       - name: PR
         uses: peter-evans/create-pull-request@v3
+        push-to-fork: korneliakobiela/COVID-19/
         with:
           token: ${{ secrets.GH_PAT }}
           commit-message: Update remote Data
